# yapp

./: .env.example  .gitignore  CODEOWNERS  README  README.md  docker-compose.yml  start.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  request_feature.yml
.github/workflows/: go.yml  rust.yml
BDD/: schema-sso.sql  schema.sql
backend/: .air.toml  .dockerfile  go.mod  go.sum  main.go  models.go
backend/cmd/server/: main.go
backend/internal/database/: database.go  migrations.go  postgres.go
backend/internal/redisService/: client.go
backend/tmp/: main
dockerfiles/: dotnet-sdk.dockerfile  gcc.dockerfile  golang.dockerfile  install.sh  node-js.dockerfile  node-ts.dockerfile  openjdk.dockerfile  python.dockerfile  rust.dockerfile  swift.dockerfile
docs/: system_overview.md
frontend/: .dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  theme.css
frontend/src/Pages/: CodingPage.tsx  HomePage.tsx
frontend/src/components/: ErrorBoundary.tsx  ExamScheduleWatcher.tsx  ProtectedRoute.tsx
frontend/src/constants/: storage.ts
frontend/src/context/: AuthContext.tsx
judge/: .dockerfile  Cargo.toml
judge/src/: docker.rs  lib.rs  main.rs  models.rs  redis_service.rs
judge/src/docker/: docker.rs
judge/src/models/: models.rs
judge/src/redis/: mod.rs  redis.rs
judge/src/request/: request.rs
judge/src/task/: file_injector.rs  mod.rs  task.rs
judge/tests/: languages.rs  rust_submission.rs  submission.rs
migrations/: 001_init.sql  002_rls.sql
scripts/: test_auth.sh
(+152 files in other folders)
