[package]
name = "judge"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.19.4"
crossbeam-queue = "0.3.12"
futures-util = "0.3.31"
redis = { version = "0.32.7", features = ["tokio-comp", "aio", "connection-manager"] }
rstest = "0.26.1"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
